--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap" rel="stylesheet"> 
 	<title>Document</title>
 </head>
 <body>
-	<div class="shapka">
-		<img src="logo.png" alt="" width="200">
-		<div class="nadpis"> pomidorro.org</div>
+	<div class="container">
+		
+        <div class="item" id="item-1">первый элемент</div> 
+        <div class="item" id="item-2">второй элемент</div> 
+        <div class="item" id="item-3">третий элемент</div>
+
+
 	</div>
-	<DIV class="contakty"><span>
-			+7800 555 35 35
-	</span>
-	<span>zakaz@pomidorro.ru</span>
-	</DIV>
-	<div class="adress">
-		<DIV>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Sit est excepturi deserunt. Pariatur, explicabo. Officia illum repellat rerum ea at inventore, omnis commodi nemo odit sit tempora perspiciatis nihil est.</DIV>
+
 
 	
 </body>
