--- a/index1.html
+++ b/index1.html
@@ -3,20 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style1.css">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	<title>Document</title>
 </head>
 <body>
-	<div class="container">
-		
-        <div class="item" id="item-1">первый элемент</div> 
-        <div class="item" id="item-2">второй элемент</div> 
-        <div class="item" id="item-3">третий элемент</div>
-
-
+	<div class="header-container flex">
+		<img class="header-item-1" src="logo.png" alt="">
+		<div class="header-item-2">pomidorro.org</div>
 	</div>
-
-
+	<div class="menu-container flex">
+		<div class="menu-item"><a href="">menu1</a></div>
+		<div class="menu-item"><a href="">menu2</a></div>
+		<div class="menu-item"><a href="">menu3</a></div>
+	</div>
 	
 </body>
 </html>
