--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="style.css">
 	<title>Document</title>
 </head>
 <body>
-	<div class="container">
-		
-        <div class="item" id="item-1">первый элемент</div> 
-        <div class="item" id="item-2">второй элемент</div> 
-        <div class="item" id="item-3">третий элемент</div>
-
-
+	<div class="header_container">
+		<div class="header_text_large">курорты</div>
+		<div class="header_text_large">Можайска</div>
+		<div class="header_text_small">с 1231</div>
 	</div>
 
+	<div class="text_container">
+		<h2>Lorem ipsum</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste aut veritatis, laborum unde id sunt nobis culpa enim. Optio atque ut sint earum cumque pariatur, fugit quis, at dolorem doloremque.
+		Temporibus tenetur atque ab eos culpa vel ullam placeat veniam saepe, velit, ipsam non similique, possimus asperiores, obcaecati officia explicabo. Fuga repellat eum iste, sunt debitis iusto amet rerum tempore?</p>
+		<p>Vel magni tempora in quasi iusto! Perferendis obcaecati optio ullam nulla minima maxime, ab assumenda sit molestias ducimus veritatis voluptas quo quam asperiores, id expedita. Nam, ipsum eligendi id eos.</p>
+		<p>Quidem tempore repellendus, repellat qui, eum sequi. Enim officiis vitae aperiam iure, nihil unde ipsum est reiciendis obcaecati saepe itaque non quam ea autem asperiores fugit ad culpa architecto, minima.
+		Esse reiciendis non suscipit veritatis, iure ipsa id minima quisquam aut. Similique, odio ad tenetur eos eum saepe in, laudantium deleniti, earum animi assumenda culpa delectus beatae, blanditiis eveniet ea.</p>
+	</div>
 
-	
+	<div class="photo_container">
+		<img src="img/1.jpg" alt="">
+		<img src="img/2.jpg" alt="">
+		<img src="img/3.jpg" alt="">
+	</div>
+
 </body>
 </html>
