--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"> 
 	<title>Document</title>
 </head>
 <body>
@@ -11,22 +13,41 @@
 		<div class="header_text_large">курорты</div>
 		<div class="header_text_large">Можайска</div>
 		<div class="header_text_small">с 1231</div>
+	    <a href="#visit" class="button">Описание</a>
 	</div>
+
 
 	<div class="text_container">
 		<h2>Lorem ipsum</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste aut veritatis, laborum unde id sunt nobis culpa enim. Optio atque ut sint earum cumque pariatur, fugit quis, at dolorem doloremque.
-		Temporibus tenetur atque ab eos culpa vel ullam placeat veniam saepe, velit, ipsam non similique, possimus asperiores, obcaecati officia explicabo. Fuga repellat eum iste, sunt debitis iusto amet rerum tempore?</p>
-		<p>Vel magni tempora in quasi iusto! Perferendis obcaecati optio ullam nulla minima maxime, ab assumenda sit molestias ducimus veritatis voluptas quo quam asperiores, id expedita. Nam, ipsum eligendi id eos.</p>
-		<p>Quidem tempore repellendus, repellat qui, eum sequi. Enim officiis vitae aperiam iure, nihil unde ipsum est reiciendis obcaecati saepe itaque non quam ea autem asperiores fugit ad culpa architecto, minima.
-		Esse reiciendis non suscipit veritatis, iure ipsa id minima quisquam aut. Similique, odio ad tenetur eos eum saepe in, laudantium deleniti, earum animi assumenda culpa delectus beatae, blanditiis eveniet ea.</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, exercitationem provident, cumque iste quae error odit quis qui aut quisquam porro maiores delectus repellendus voluptatem eaque ab autem at? Corporis.</p>
+		<p>Iure reiciendis perspiciatis porro non minima, sit tenetur fuga, modi tempora vel ratione repudiandae, incidunt at placeat, alias enim exercitationem quaerat rem. Ducimus magni odio repellendus enim aspernatur explicabo, neque.</p>
+		<p>Perspiciatis, excepturi hic, quisquam, eaque quo architecto facilis aliquid illo voluptates libero itaque modi reprehenderit quod. Commodi dicta omnis voluptas obcaecati. Excepturi pariatur adipisci nemo atque, fugiat est tempore, eaque?</p>
+		<p>Harum doloremque, architecto! Quaerat minus labore repellat, recusandae, optio illum dolores reprehenderit quia ducimus quam. Laborum optio, eum assumenda corrupti unde iusto illo! Quaerat aspernatur, porro exercitationem perspiciatis, maxime doloremque.
+		Quia, saepe? Tenetur enim explicabo neque quam provident ducimus velit vero corporis molestias odio natus id cum dolor, illo nisi, voluptatem saepe accusantium, cumque quia, suscipit fugiat doloremque vitae ullam?</p>
 	</div>
 
 	<div class="photo_container">
-		<img src="img/1.jpg" alt="">
-		<img src="img/2.jpg" alt="">
-		<img src="img/3.jpg" alt="">
+		<img src="1.jpg" alt="">
+		<img src="2.jpg" alt="">
+		<img src="3.jpg" alt="">
 	</div>
+
+	<div class="text_container">
+		<h2><a name="visit"> Lorem </a> ipsum</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, exercitationem provident, cumque iste quae error odit quis qui aut quisquam porro maiores delectus repellendus voluptatem eaque ab autem at? Corporis.</p>
+		<p>Iure reiciendis perspiciatis porro non minima, sit tenetur fuga, modi tempora vel ratione repudiandae, incidunt at placeat, alias enim exercitationem quaerat rem. Ducimus magni odio repellendus enim aspernatur explicabo, neque.</p>
+		<p>Perspiciatis, excepturi hic, quisquam, eaque quo architecto facilis aliquid illo voluptates libero itaque modi reprehenderit quod. Commodi dicta omnis voluptas obcaecati. Excepturi pariatur adipisci nemo atque, fugiat est tempore, eaque?</p>
+		<p>Harum doloremque, architecto! Quaerat minus labore repellat, recusandae, optio illum dolores reprehenderit quia ducimus quam. Laborum optio, eum assumenda corrupti unde iusto illo! Quaerat aspernatur, porro exercitationem perspiciatis, maxime doloremque.
+		Quia, saepe? Tenetur enim explicabo neque quam provident ducimus velit vero corporis molestias odio natus id cum dolor, illo nisi, voluptatem saepe accusantium, cumque quia, suscipit fugiat doloremque vitae ullam?</p>
+	</div>
+
+	<div class="container_footer">
+		<a href="">lorem</a>
+		<a href="">ipsum</a>
+		<a href="">dolor</a>
+	</div>
+
+
 
 </body>
 </html>
