--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 <body>
 	<div class="header_container">
+		<a href="" class="button_fixed">Текст</a>
 		<div class="header_text_large">курорты</div>
 		<div class="header_text_large">Можайска</div>
 		<div class="header_text_small">с 1231</div>
-	    <a href="#visit" class="button">Описание</a>
+		<div class="header_button_container">
+	    <a href="#visit" class="header_button button_primary">Описание</a>
+	    <a href="#visit" class="header_button button_secondary">Описание</a>
+	    </div>
 	</div>
 
 
@@ -22,7 +26,7 @@
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, exercitationem provident, cumque iste quae error odit quis qui aut quisquam porro maiores delectus repellendus voluptatem eaque ab autem at? Corporis.</p>
 		<p>Iure reiciendis perspiciatis porro non minima, sit tenetur fuga, modi tempora vel ratione repudiandae, incidunt at placeat, alias enim exercitationem quaerat rem. Ducimus magni odio repellendus enim aspernatur explicabo, neque.</p>
 		<p>Perspiciatis, excepturi hic, quisquam, eaque quo architecto facilis aliquid illo voluptates libero itaque modi reprehenderit quod. Commodi dicta omnis voluptas obcaecati. Excepturi pariatur adipisci nemo atque, fugiat est tempore, eaque?</p>
-		<p>Harum doloremque, architecto! Quaerat minus labore repellat, recusandae, optio illum dolores reprehenderit quia ducimus quam. Laborum optio, eum assumenda corrupti unde iusto illo! Quaerat aspernatur, porro exercitationem perspiciatis, maxime doloremque.
+		<p> Harum doloremque, architecto! Quaerat minus labore repellat, recusandae, optio illum dolores reprehenderit quia ducimus quam. Laborum optio, eum assumenda corrupti unde iusto illo! Quaerat aspernatur, porro exercitationem perspiciatis, maxime doloremque.
 		Quia, saepe? Tenetur enim explicabo neque quam provident ducimus velit vero corporis molestias odio natus id cum dolor, illo nisi, voluptatem saepe accusantium, cumque quia, suscipit fugiat doloremque vitae ullam?</p>
 	</div>
 
