--- a/index.html
+++ b/index.html
@@ -3,17 +3,91 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@800&display=swap" rel="stylesheet"> 
 	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet"> 
+	<link rel="stylesheet" href="style.css">
 </head>
-   <body>
-   	<div class="photo_container">
-   		<div class="text">Слово</div>
-   	</div>
-   	
+<body>
+	<header class="main_header">
+		<div class="logo">CRL</div>
+		<nav class="header_menu">
+			<ul class="menu_container">
+				<li><a class="menu_item" href="">Home</a></li>
+				<li><a class="menu_item" href="">About</a></li>
+				<li><a class="menu_item" href="">Contact</a></li>
+				<li><a class="menu_item" href="">Sign In</a></li>
+				<li><a class="menu_item rounded" href="">Sign Up</a></li>
+			</ul>
+		</nav>
+	</header>
 
-	
-  </body>
-  </html>
+	<main>
+
+		<section class="section_first">
+			<div class="section_first_left">
+				Responsive <br> layouts <span class="text_dark">don’t <br>
+				have to be a <br> struggle</span>
+			</div>
+			<div class="section_first_right">
+				<div>Lorem ipsum dolor sit am   et, consectetur <br>
+				     adipiscin elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</div> <br>
+				     <span class="rounded">I want to learn</span>
+			</div>
+		</section>
+
+		<section class="section_second">
+			<article >
+				<h2>Mobile-first</h2>
+				Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt  ut <br> labore et dolore magna aliqua. Ut <br> enim ad minim veniam
+			</article>
+
+			
+			<article>
+				<h2>Efficent</h2>
+				Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt  ut <br> labore et dolore magna aliqua. Ut <br> enim ad minim veniam
+			</article>
+
+			
+			<article>
+				<h2>Done right</h2>
+				Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt  ut <br> labore et dolore magna aliqua. Ut <br> enim ad minim veniam
+			</article>
+		</section>
+
+		<section class="section_third">
+			<div class="section_third_left">
+				<h2>It doesn’t have to be so hard </h2>
+				<p>
+					Lorem ipsum dolor sit amet,  consectetur adipiscing elit, sed do eiusmod tempor incididunt  ut labore et dolore magna aliqua. Ut  enim ad minim veniam
+				</p>
+				<img src="картинка для макета.jpg">
+				<p>
+					Lorem ipsum dolor sit amet,  consectetur adipiscing elit, sed do eiusmod tempor incididunt  ut labore et dolore magna aliqua. Ut  enim ad minim veniam
+				</p>
+			</div>
+			
+			<div class="section_third_right">
+				<article>
+				<h2>Break it down </h2>
+				<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt  ut <br> labore et dolore magna aliqua.</p>
+			</article>
+
+			<article>
+				<h2>Work your way up </h2>
+				<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt  ut <br> labore et dolore magna aliqua.</p>
+			</article>
+
+			<article>
+				<h2>Give something to break </h2>
+				<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt  ut <br> labore et dolore magna aliqua.</p>
+			</article>
+
+			</div>
+		</section>
+
+		</main>
+
+	<footer></footer>
+</body>
+</html>
